--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
   }
 }
