--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
+    "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
