--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "the-land-network",
+  "description": "<!-- Stackoverflow --> <!-- MOngoDB --> <!-- express -->",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
